# wgpu-layers

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain  webdriver.json
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/install-graphics-driver/: action.yml
.github/actions/post-build-env/: action.yml
.github/actions/prepare-build-env/: action.yml
.github/workflows/: ci.yml
demo/: README.md  index.html  package-lock.json  package.json  vite.config.js  webpack.config.js
demo/public/: index.html
demo/src/: OffscreenTileLayer.js  index.js  offscreen_layer.js  types.js  worker.js
examples/: window.rs
pkg/: package.json
src/: feature.rs  lib.rs  offscreen_window.rs  parser.rs  renderer.rs  view.rs
src/bucket/: feature.rs  fill.rs  line.rs  line_tessellation.rs  mod.rs
src/bucket/shader/: bucket.wgsl  fill.wgsl  styling.wgsl
src/ressource/: mod.rs  view.rs
src/ressource/material/: fill.rs  line.rs  mod.rs  point.rs
src/ressource/material/shader/: common.wgsl
src/ressource/tile/: fill.rs  line.rs  mod.rs  point.rs
src/tessellation/: mod.rs
src/tessellation/shader/: line.wgsl
tests/: render_test.rs  utils.rs
tests/pbf/: osm_4_8_5.pbf
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  worker.js
www/public/: index.html
www/src/: offscreen_layer.js
