[package]
name = "wgpu-layers"
version = "0.1.0"
description = "WebGPU mapping renderer for OpenLayers"
authors = ["Paul Lange <paul.lange@data-experts.de>"]
repository = "https://github.com/codeart1st/wgpu-layers"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
multithreaded = []

[dependencies]
log = "0.4.20"
wgpu = "0.19.1"
rayon = "1.8.1"
futures = "0.3.30"
geo-types = "0.7.12"
bytemuck = "1.14.1"
bytemuck_derive = "1.5.0"
mvt-reader = "1.2.0"
earcutr = "0.4.3"
glam = { version = "0.25.0", default-features = false, features = ["libm", "bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
wasm-bindgen-rayon = "1.2.1" # alternative https://github.com/chemicstry/wasm_thread
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", features = [
  "OffscreenCanvas",
  "HtmlElement", # from here all features are for integrationtests
  "CssStyleDeclaration",
  "HtmlCanvasElement",
  "FileReader",
  "Blob"
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
env_logger = "0.11.1"
winit = "0.29"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
pdqhash = "0.1.1"
js-sys = "0.3.68"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # version in wasm-pack is to old for simd128